[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/gut/plugin_control.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Menu/Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Menu/Textures/PlayButton.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menu/Textures/MenuDemo.png" type="Texture" id=4]
[ext_resource path="res://Assets/Menu/Textures/MHTitle.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menu/Textures/SettingsButton.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menu/Textures/Lore Button.png" type="Texture" id=7]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 128, 66.1338 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 64, 63.6643 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GutButton" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.8
anchor_right = 0.6
anchor_bottom = 0.85
text = "Gut"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gut" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 740, 250 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
_should_maximize = true
_should_print_to_console = false
_file_prefix = "feature_"
_include_subdirectories = true
_directory1 = "res://Tests"

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 200
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="VSplitContainer"]
margin_right = 1024.0
margin_bottom = 200.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VSplitContainer"]
margin_top = 212.0
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="VSplitContainer/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -178.811
margin_top = 104.65
margin_right = 181.189
margin_bottom = 244.65
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGameButton" type="Button" parent="VSplitContainer/TextureRect"]
visible = false
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 0.55
margin_top = -106.0
margin_bottom = -105.4
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="VSplitContainer/TextureRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 156.975
margin_top = -99.5
margin_right = 361.975
margin_bottom = 99.5
custom_styles/normal = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="VSplitContainer/TextureRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -357.909
margin_top = -82.3647
margin_right = -152.909
margin_bottom = 78.6353
custom_styles/normal = SubResource( 3 )

[connection signal="pressed" from="GutButton" to="." method="_on_GutButton_pressed"]
[connection signal="gut_ready" from="Gut" to="." method="_on_Gut_gut_ready"]
[connection signal="pressed" from="VSplitContainer/TextureRect/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="VSplitContainer/TextureRect/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="VSplitContainer/TextureRect/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VSplitContainer/TextureRect/CreditsButton" to="." method="_on_CreditsButton_pressed"]
